--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -35,8 +35,8 @@ msgstr "自定义规则集与策略组管理（仅 TUN 内核）"
 msgid "General Settings"
 msgstr "常规设置"
 
-msgid "DNS Setting"
-msgstr "DNS 设置"
+msgid "Settings"
+msgstr "设置"
 
 msgid "Config Update"
 msgstr "配置文件订阅"
@@ -2946,3 +2946,24 @@ msgstr "抖音"
 
 msgid "Warning: Skip the Custom Rule that Core not Support"
 msgstr "警告：跳过核心不支持的自定义规则"
+
+msgid "Specific Interface"
+msgstr "指定接口"
+
+msgid "(Interface Name)"
+msgstr "(接口名称)"
+
+msgid "Specific Group"
+msgstr "指定策略组"
+
+msgid "Warning: Only Meta Core Support Specific Group, Skip Setting"
+msgstr "警告：仅 Meta 内核支持指定 DNS 的策略组，跳过设置"
+
+msgid "Proxy Server"
+msgstr "节点解析"
+
+msgid "Warning: Only Meta Core Support proxy-server-nameserver, Skip Setting"
+msgstr "警告：仅 Meta 内核支持设置节点域名解析的 DNS，跳过设置"
+
+msgid "Warning: Meta Core not Support Specific Interface, Skip Setting"
+msgstr "警告：Meta 内核不支持设置指定 DNS 出口，跳过设置"
