--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -2941,8 +2941,8 @@ msgstr "剩余"
 msgid "days"
 msgstr "天"
 
-msgid "抖音（Douyin）"
-msgstr "抖音"
+msgid "Douyin"
+msgstr "抖音（Douyin）"
 
 msgid "Warning: Skip the Custom Rule that Core not Support"
 msgstr "警告：跳过核心不支持的自定义规则"
