--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -3018,3 +3018,33 @@ msgstr "启用 HTTP/3"
 
 msgid "DOH DNS Prefers Using HTTP/3 For Connections"
 msgstr "DOH 类型的 DNS 优先使用 HTTP/3 进行连接"
+
+msgid "Control Panel"
+msgstr "控制面板"
+
+msgid "Unzip Error!"
+msgstr "解压失败！"
+
+msgid "Unzip Error"
+msgstr "解压失败"
+
+msgid "Switch To Official Version"
+msgstr "切换至官方版本"
+
+msgid "Switch To Meta Version"
+msgstr "切换至 Meta 版本"
+
+msgid "Switch Dashboard Version"
+msgstr "切换 Dashboard 版本"
+
+msgid "Switch Yacd Version"
+msgstr "切换 Yacd 版本"
+
+msgid "Downloading File..."
+msgstr "文件下载中..."
+
+msgid "Switch Failed"
+msgstr "切换失败"
+
+msgid "Switch Successful"
+msgstr "切换成功"
