--- a/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
+++ b/luci-app-openclash/po/zh-cn/openclash.zh-cn.po
@@ -3105,3 +3105,6 @@ msgstr "绕过中国大陆 IPv6 黑名单"
 
 msgid "Domains or IPs in The List Will Not be Affected by The China IP Route Option, Depend on Dnsmasq"
 msgstr "列表中的域名或 IP 将不会受到绕过中国大陆 IP 选项的影响，此功能依赖于 Dnsmasq"
+
+msgid "Warning: You Need to Turn off The Rebinding Protection Option of Dnsmasq When Hosts Has Set a Reserved Address"
+msgstr "警告：Hosts 设置了保留地址时需要关闭 dnsmasq 的重绑定保护选项"
